WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263196
REGRESSION (STP): Video won't play on bilibili.com
https://bugs.webkit.org/show_bug.cgi?id=263196
Summary
REGRESSION (STP): Video won't play on bilibili.com
lyz3636
Reported
2023-10-16 08:17:53 PDT
Steps to reproduce: go to bilibili.com and click on any videos. The video won't play and there is no play button on the screen, just dark. Expected behavior: The video is ready to play or plays automatically. WebKit 618.1.1
Attachments
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2023-10-16 08:57:24 PDT
I can reproduce with STP 180.
Radar WebKit Bug Importer
Comment 2
2023-10-16 08:57:35 PDT
<
rdar://problem/117020123
>
Jean-Yves Avenard [:jya]
Comment 3
2023-10-16 19:49:44 PDT
At this stage, a site error is preventing me to investigate the issue further and there’s no provided logs that would allow to understand what's going on. Using STP 180 I get: ``` [Error] Unhandled Promise Rejection: TypeError: i.querySelector is not a function. (In 'i.querySelector(".".concat(r,"-video-area"))', 'i.querySelector' is undefined) [Error] TypeError: undefined is not an object (evaluating 'e.portStore.attachExtState') a6 (framework-2c79e2a64abdb08b.js:9:69820) (anonymous function) (framework-2c79e2a64abdb08b.js:9:70332) lH (framework-2c79e2a64abdb08b.js:9:51354) uY (framework-2c79e2a64abdb08b.js:9:90791) e (framework-2c79e2a64abdb08b.js:9:111125) (anonymous function) (framework-2c79e2a64abdb08b.js:9:111134) oI (framework-2c79e2a64abdb08b.js:9:111646) oC (framework-2c79e2a64abdb08b.js:9:96277) r4 (framework-2c79e2a64abdb08b.js:9:44778) oU (framework-2c79e2a64abdb08b.js:9:113344) o (framework-2c79e2a64abdb08b.js:9:107749) x (framework-2c79e2a64abdb08b.js:33:1375) T (framework-2c79e2a64abdb08b.js:33:1905) [Error] TypeError: undefined is not an object (evaluating 'e.portStore.attachExtState') J (main-128baddf24cec181.js:1:10065) fn (main-128baddf24cec181.js:1:9142) componentDidCatch (main-128baddf24cec181.js:1:7643) (anonymous function) (framework-2c79e2a64abdb08b.js:9:70440) lH (framework-2c79e2a64abdb08b.js:9:51354) uY (framework-2c79e2a64abdb08b.js:9:90791) e (framework-2c79e2a64abdb08b.js:9:111125) (anonymous function) (framework-2c79e2a64abdb08b.js:9:111134) oI (framework-2c79e2a64abdb08b.js:9:111646) oC (framework-2c79e2a64abdb08b.js:9:96277) r4 (framework-2c79e2a64abdb08b.js:9:44778) oU (framework-2c79e2a64abdb08b.js:9:113344) o (framework-2c79e2a64abdb08b.js:9:107749) x (framework-2c79e2a64abdb08b.js:33:1375) T (framework-2c79e2a64abdb08b.js:33:1905) [Error] A client-side exception has occurred, see here for more info:
https://nextjs.org/docs/messages/client-side-exception-occurred
J (main-128baddf24cec181.js:1:10082) fn (main-128baddf24cec181.js:1:9142) componentDidCatch (main-128baddf24cec181.js:1:7643) (anonymous function) (framework-2c79e2a64abdb08b.js:9:70440) lH (framework-2c79e2a64abdb08b.js:9:51354) uY (framework-2c79e2a64abdb08b.js:9:90791) e (framework-2c79e2a64abdb08b.js:9:111125) (anonymous function) (framework-2c79e2a64abdb08b.js:9:111134) oI (framework-2c79e2a64abdb08b.js:9:111646) oC (framework-2c79e2a64abdb08b.js:9:96277) r4 (framework-2c79e2a64abdb08b.js:9:44778) oU (framework-2c79e2a64abdb08b.js:9:113344) o (framework-2c79e2a64abdb08b.js:9:107749) x (framework-2c79e2a64abdb08b.js:33:1375) T (framework-2c79e2a64abdb08b.js:33:1905) [Error] TypeError: undefined is not an object (evaluating 'e.portStore.getElements') a6 (framework-2c79e2a64abdb08b.js:9:69820) (anonymous function) (framework-2c79e2a64abdb08b.js:9:70332) lH (framework-2c79e2a64abdb08b.js:9:51354) uY (framework-2c79e2a64abdb08b.js:9:90791) e (framework-2c79e2a64abdb08b.js:9:111125) (anonymous function) (framework-2c79e2a64abdb08b.js:9:111134) oI (framework-2c79e2a64abdb08b.js:9:111646) oC (framework-2c79e2a64abdb08b.js:9:96277) r4 (framework-2c79e2a64abdb08b.js:9:44778) oU (framework-2c79e2a64abdb08b.js:9:113344) o (framework-2c79e2a64abdb08b.js:9:107749) x (framework-2c79e2a64abdb08b.js:33:1375) T (framework-2c79e2a64abdb08b.js:33:1905) [Error] TypeError: undefined is not an object (evaluating 'e.portStore.getElements') J (main-128baddf24cec181.js:1:10065) fn (main-128baddf24cec181.js:1:9142) componentDidCatch (main-128baddf24cec181.js:1:7643) (anonymous function) (framework-2c79e2a64abdb08b.js:9:70440) lH (framework-2c79e2a64abdb08b.js:9:51354) uY (framework-2c79e2a64abdb08b.js:9:90791) e (framework-2c79e2a64abdb08b.js:9:111125) (anonymous function) (framework-2c79e2a64abdb08b.js:9:111134) oI (framework-2c79e2a64abdb08b.js:9:111646) oC (framework-2c79e2a64abdb08b.js:9:96277) r4 (framework-2c79e2a64abdb08b.js:9:44778) oU (framework-2c79e2a64abdb08b.js:9:113344) o (framework-2c79e2a64abdb08b.js:9:107749) x (framework-2c79e2a64abdb08b.js:33:1375) T (framework-2c79e2a64abdb08b.js:33:1905) [Error] A client-side exception has occurred, see here for more info:
https://nextjs.org/docs/messages/client-side-exception-occurred
J (main-128baddf24cec181.js:1:10082) fn (main-128baddf24cec181.js:1:9142) componentDidCatch (main-128baddf24cec181.js:1:7643) (anonymous function) (framework-2c79e2a64abdb08b.js:9:70440) lH (framework-2c79e2a64abdb08b.js:9:51354) uY (framework-2c79e2a64abdb08b.js:9:90791) e (framework-2c79e2a64abdb08b.js:9:111125) (anonymous function) (framework-2c79e2a64abdb08b.js:9:111134) oI (framework-2c79e2a64abdb08b.js:9:111646) oC (framework-2c79e2a64abdb08b.js:9:96277) r4 (framework-2c79e2a64abdb08b.js:9:44778) oU (framework-2c79e2a64abdb08b.js:9:113344) o (framework-2c79e2a64abdb08b.js:9:107749) x (framework-2c79e2a64abdb08b.js:33:1375) T (framework-2c79e2a64abdb08b.js:33:1905) [Error] Error rendering page: – Error: Cancel rendering route Error: Cancel rendering ```
Jean-Yves Avenard [:jya]
Comment 4
2023-10-17 04:41:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19161
EWS
Comment 5
2023-10-18 03:00:18 PDT
Committed
269457@main
(55a286438b23): <
https://commits.webkit.org/269457@main
> Reviewed commits have been landed. Closing PR #19161 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug